--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,7 +84,6 @@ body{
   padding-top: 80px;
   height: 100vh;
   background-image: url("./component/home/image/covidbg3.jpg");
-  position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -119,10 +118,11 @@ body{
 
 #myInput{
   border-radius: 25px;
-  border: 2px solid;
+  border: 3px solid #be60e9;
   padding: 10px;
   justify-content: center;
   /* margin: auto 50%; */
+  box-shadow: 0px 0px 20px rgb(0 0 0 / 15%);
   text-align: center;
   font-size:20px;
   width: 40rem;
@@ -180,6 +180,17 @@ input:focus {outline:0;}
   width: 100%;
 }
 
+.statetablecontainer{
+}
+
+
+.tablecss{
+  box-shadow: 0px 0px 20px rgb(0 0 0 / 15%);
+  margin-top: 60px;
+  margin-bottom: 70px;
+  border-radius: 19px;
+}
+
 .stateheading{
   text-align: center;
 }
@@ -234,11 +245,12 @@ input:focus {outline:0;}
 }
 .toggleButton {
   background-color:	#696969;
+  color: white;
   box-shadow: -4px 6px 12px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: -4px 6px 12px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: -4px 6px 12px 0px rgba(0,0,0,0.75);
   border-radius: 25px;
-  
+  text-shadow: 2px 8px 13px rgba(255, 255, 255, 0.911), 0px -5px 35px rgba(252, 252, 252, 0.966);
 }
 button:focus {outline:0;}
 
