--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+p{
+  margin : 0;
+}
+.card-header{
+  background-color: #CAEBFA;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
